--- a/fix8/welfvita-backend/package.json
+++ b/fix8/welfvita-backend/package.json
@@ -23,6 +23,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.41.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
