--- a/fix8/admin/package.json
+++ b/fix8/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/charts": "^2.2.0",
     "@ant-design/icons": "^5.4.0",
+    "@tanstack/react-query": "^5.90.9",
     "antd": "^5.20.0",
     "axios": "^1.13.2",
     "dayjs": "^1.11.13",
