--- a/fix8/welfvita-backend/package.json
+++ b/fix8/welfvita-backend/package.json
@@ -20,15 +20,19 @@
   "author": "Welfvita Team",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "kavenegar": "^1.1.4",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
-    "cloudinary": "^1.41.3",
     "multer-storage-cloudinary": "^4.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
